--- a/html/AddInfo.html
+++ b/html/AddInfo.html
@@ -24,7 +24,7 @@
     </header>
     <!-- UC2 Form with header and name-->
     <div class="form-content">
-        <form class="form" action="#" onsubmit="save();return false">
+        <form class="form" action="#" onsubmit="save();">
             <div class="form-head">
                 Employee Payroll form
             </div>
@@ -44,7 +44,7 @@
                     <label>
                         <input type="radio" id="profile2" name="profile" value="../assets/profile-images/Ellipse 1.png"
                             required>
-                        <img class="profile" id="image2" src="../Assests/profile-images/Ellipse 1.png">
+                        <img class="profile" id="image2" src="../Assests/profile-images/Ellipse -1.png">
                     </label>
                     <label>
                         <input type="radio" id="profile3" name="profile" value="../assets/profile-images/Ellipse -8.png"
